--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="Currently an empty blog.">
-		<title>utsbby</title>
+		<title>Login</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 		<link rel="stylesheet" type="text/css" href="css/basic.css" id="theme_css"/>
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
