--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="_assets/mdl/material.min.css">
 		<link rel="stylesheet" type="text/css" href="_assets/css/base.css">
 		<script type="text/javascript" src="_assets/mdl/material.min.js"></script>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
 		<script type="text/javascript" src="_assets/js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="_assets/js/displayposts.js"></script>
 		<script type="text/javascript" src="_assets/js/newpost.js"></script>
