--- a/home.html
+++ b/home.html
@@ -21,8 +21,8 @@
 		<!-- content -->
 		<div class="mdl-layout mdl-js-layout">
 			<div class="mdl-grid">
-				<div class="mdl-cell mdl-cell--2-col"></div>
-				<div class="mdl-cell mdl-cell--8-col">
+				<div class="mdl-cell mdl-cell--3-col"></div>
+				<div class="mdl-cell mdl-cell--6-col">
 				
 					<div class="mdl-grid">
 				    <form action="#">
@@ -37,11 +37,28 @@
 				  </div>
 
 				  <div class="mdl-grid" id="posts">
-
+						<div class="mdl-cell mdl-shadow--2dp cardwidth">
+							<div class="mdl-grid">
+								<div class="mdl-cell mdl-cell--2-col profileimg">
+									<img src="_assets/data/image/anto.png" class="profileimg"/>
+								</div>
+								<div class="mdl-cell mdl-cell--8-col carddet">
+								  <div class="mdl-card__title">Mr. Whiskers</div>
+								  <div class="mdl-card__supporting-text">I'm a cat. yes.
+								  </div>
+								  <div class="mdl-card__actions mdl-card--border">
+								  	<span class="postdate">posted at 2015-04-30</span>
+								  	<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect likes">
+	      							Like
+	    							</a>
+								  </div><!-- button -->
+								</div><!-- mdlcell 8 -->
+							</div><!--mdl-grid-->
+						</div>
 				  </div>
 
 				</div>
-				<div class="mdl-cell mdl-cell--2-col"></div>
+				<div class="mdl-cell mdl-cell--3-col"></div>
 			</div><!-- mdl-grid -->
 		</div><!-- content -->
 
