--- a/home.html
+++ b/home.html
@@ -11,11 +11,39 @@
 		<script type="text/javascript" src="_assets/js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="_assets/js/displayposts.js"></script>
 		<script type="text/javascript" src="_assets/js/newpost.js"></script>
+		<script type="text/javascript" src="_assets/js/like.js"></script>
 
 	</head>
-	<body onload="display()">
+	<body onclick="display()">
 
 		<!-- header -->
+		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+		  <header class="mdl-layout__header">
+		    <div class="mdl-layout__header-row">
+		      <div class="mdl-layout-spacer"></div>
+		      <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
+		        <label class="mdl-button mdl-js-button mdl-button--icon" for="fixed-header-drawer-exp">
+		          <i class="material-icons">search</i>
+		        </label>
+		        <div class="mdl-textfield__expandable-holder">
+		          <input class="mdl-textfield__input" type="text" name="sample" id="fixed-header-drawer-exp" />
+		        </div>
+		      </div>
+		    </div>
+		  </header>
+		  <div class="mdl-layout__drawer">
+		    <span class="mdl-layout-title">Nar</span>
+		    <nav class="mdl-navigation">
+		      <a class="mdl-navigation__link" href="">Profile</a>
+		      <a class="mdl-navigation__link" href="">Link</a>
+		      <a class="mdl-navigation__link" href="">Link</a>
+		      <a class="mdl-navigation__link" href="">Link</a>
+		    </nav>
+		  </div>
+		  <main class="mdl-layout__content">
+		    <div class="page-content"><!-- Your content goes here --></div>
+		  </main>
+		</div>		
 
 		<!-- content -->
 		<div class="mdl-layout mdl-js-layout">
